--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     </div>
 
     <script>
-        const GOOGLE_SHEET_URL = "https://script.google.com/macros/s/AKfycbw3WU2rvhzkVkhcbPio3h89od_nWycb-FKLyrzKtCK4xOUiRjb0j_9shgjbq4jvPFNr/exec
-"; // Replace with your Google Apps Script URL
+        const GOOGLE_SHEET_URL = "https://script.google.com/macros/s/AKfycbw3WU2rvhzkVkhcbPio3h89od_nWycb-FKLyrzKtCK4xOUiRjb0j_9shgjbq4jvPFNr/exec"; // Replace with your Google Apps Script URL
         let donationAmount = 0;
 
         document.querySelectorAll('.donation-option').forEach(button => {
