--- a/index.html
+++ b/index.html
@@ -46,15 +46,21 @@
 
         document.getElementById("donationForm").addEventListener("submit", async function (event) {
             event.preventDefault();
+            console.log("Donate button clicked!"); // Debugging step
+
             donationAmount = parseFloat(document.getElementById("donationAmount").value);
-            
-            if (isNaN(donationAmount) || donationAmount <= 0 || donationAmount > 3300) return;
+            if (isNaN(donationAmount) || donationAmount <= 0 || donationAmount > 3300) {
+                console.log("Invalid donation amount.");
+                return;
+            }
 
             try {
+                console.log("Fetching donation total...");
                 let response = await fetch(GOOGLE_SHEET_URL);
                 if (!response.ok) throw new Error("Failed to fetch data");
 
                 let data = await response.json();
+                console.log("Total raised so far:", data.total);
 
                 if (data.total + donationAmount > 3300) {
                     alert("Donation goal reached! Thank you for your support.");
@@ -80,6 +86,7 @@
             }
 
             try {
+                console.log("Sending donation details to Google Sheets...");
                 await fetch(GOOGLE_SHEET_URL, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
