test Update index.html

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             <input type="text" id="firstName" placeholder="First Name" required>
             <input type="text" id="lastName" placeholder="Last Name" required>
             <input type="email" id="email" placeholder="Email" required>
-
-            <div id="paymentInfo" class="hidden">
-                <h3>Payment Information</h3>
-                <input type="text" id="cardNumber" placeholder="Card Number" required>
-                <input type="text" id="expiryDate" placeholder="MM/YY" required>
-                <input type="text" id="cvv" placeholder="CVV" required>
-            </div>
-
             <button id="confirmDonation">Confirm Donation</button>
+        </div>
+
+        <div id="paymentDetails" class="hidden">
+            <h3>Enter Payment Information</h3>
+            <input type="text" id="cardNumber" placeholder="Card Number" required>
+            <input type="text" id="expiryDate" placeholder="MM/YY" required>
+            <input type="text" id="cvc" placeholder="CVC" required>
+            <button id="submitPayment">Submit Payment</button>
         </div>
 
         <p id="message" class="hidden">Goal Reached! Thank you for your support.</p>
@@ -54,7 +54,7 @@
 
         document.getElementById("donationForm").addEventListener("submit", async function (event) {
             event.preventDefault();
-            console.log("Donate button clicked!");
+            console.log("Donate button clicked!"); 
 
             donationAmount = parseFloat(document.getElementById("donationAmount").value);
             if (isNaN(donationAmount) || donationAmount <= 0 || donationAmount > 3300) {
@@ -93,8 +93,34 @@
                 return;
             }
 
-            // Show payment section after entering details
-            document.getElementById("paymentInfo").classList.remove("hidden");
+            document.getElementById("userDetails").classList.add("hidden");
+            document.getElementById("paymentDetails").classList.remove("hidden");
+        });
+
+        document.getElementById("submitPayment").addEventListener("click", async function () {
+            let cardNumber = document.getElementById("cardNumber").value;
+            let expiryDate = document.getElementById("expiryDate").value;
+            let cvc = document.getElementById("cvc").value;
+
+            if (!cardNumber || !expiryDate || !cvc) {
+                alert("Please enter valid payment details.");
+                return;
+            }
+
+            try {
+                console.log("Sending donation details to Google Sheets...");
+                await fetch(GOOGLE_SHEET_URL, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ firstName, lastName, email, amount: donationAmount })
+                });
+
+                alert("Donation successful! Thank you.");
+                window.location.reload();
+            } catch (error) {
+                console.error("Error submitting donation:", error);
+                alert("Error submitting donation. Please try again later.");
+            }
         });
     </script>
 
