--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <input type="text" id="firstName" placeholder="First Name" required>
             <input type="text" id="lastName" placeholder="Last Name" required>
             <input type="email" id="email" placeholder="Email" required>
-
+            <button id="confirmDonation">Confirm Donation</button>    
+    <div>
         <div id="paymentDetails" class="hidden">
             <h3>Enter Payment Information</h3>
             <input type="text" id="cardNumber" placeholder="Card Number" required>
