--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
             <input type="text" id="firstName" placeholder="First Name" required>
             <input type="text" id="lastName" placeholder="Last Name" required>
             <input type="email" id="email" placeholder="Email" required>
-            <button id="confirmDonation">Confirm Donation</button>
-        </div>
-
-        <div id="paymentDetails" class="hidden">
+            
+            <!-- Payment Fields Moved Here -->
             <h3>Enter Payment Information</h3>
             <input type="text" id="cardNumber" placeholder="Card Number" required>
             <input type="text" id="expiryDate" placeholder="MM/YY" required>
             <input type="text" id="cvc" placeholder="CVC" required>
-            <button id="submitPayment">Submit Payment</button>
+            
+            <button id="confirmDonation">Confirm Donation</button>
         </div>
 
         <p id="message" class="hidden">Goal Reached! Thank you for your support.</p>
@@ -54,7 +53,7 @@
 
         document.getElementById("donationForm").addEventListener("submit", async function (event) {
             event.preventDefault();
-            console.log("Donate button clicked!"); 
+            console.log("Donate button clicked!");
 
             donationAmount = parseFloat(document.getElementById("donationAmount").value);
             if (isNaN(donationAmount) || donationAmount <= 0 || donationAmount > 3300) {
@@ -83,27 +82,16 @@
             }
         });
 
-        document.getElementById("confirmDonation").addEventListener("click", function () {
+        document.getElementById("confirmDonation").addEventListener("click", async function () {
             let firstName = document.getElementById("firstName").value;
             let lastName = document.getElementById("lastName").value;
             let email = document.getElementById("email").value;
-
-            if (!firstName || !lastName || !email) {
-                alert("Please fill in all fields.");
-                return;
-            }
-
-            document.getElementById("userDetails").classList.add("hidden");
-            document.getElementById("paymentDetails").classList.remove("hidden");
-        });
-
-        document.getElementById("submitPayment").addEventListener("click", async function () {
             let cardNumber = document.getElementById("cardNumber").value;
             let expiryDate = document.getElementById("expiryDate").value;
             let cvc = document.getElementById("cvc").value;
 
-            if (!cardNumber || !expiryDate || !cvc) {
-                alert("Please enter valid payment details.");
+            if (!firstName || !lastName || !email || !cardNumber || !expiryDate || !cvc) {
+                alert("Please fill in all fields.");
                 return;
             }
 
