Updated3 index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <input type="text" id="expiryDate" placeholder="MM/YY" required>
             <input type="text" id="cvc" placeholder="CVC" required>
             
+            <button id="confirmDonation">Confirm Donation</button>
             <button id="submitDonation">Submit Donation</button>
         </div>
 
